# Final-Year-Project

./: .env.example  .gitignore  README.md  elevenlabs_pro_voice_agent.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml
scripts/: download_vosk_model.py  list_devices.py  run_context_monitor_demo.py  run_voice_agent.py  run_web.py  test_context_monitor.py  view_context_logs.py
synq/: __init__.py  orchestrator.py
synq/agent/: __init__.py  realtime_voice_agent.py  remote_voice_agent.py  voice_agent.py
synq/api/: __init__.py  router.py
synq/audio/: __init__.py  player.py  realtime_player.py  recorder.py
synq/auth/: __init__.py  auth_token_file.py  context.py  credentials_store.py  crypto.py  jwt_tokens.py  session.py  users.py
synq/context_monitoring/: __init__.py  activity_logger.py  idle_tracker.py  monitor.py  utils.py  voice_snapshot.py
synq/desktop/: __init__.py  actions.py
synq/email_monitoring/: monitor.py
synq/gate/: __init__.py  face_gate.py
synq/integrations/: gmail_client.py  google_auth.py  google_calendar.py  google_context.py
synq/memory/: __init__.py  context.py  db.py  extractor.py  store.py
synq/nlu/: __init__.py  intent_handler.py
synq/productivity/: state.py  storage.py  vector_store.py
synq/services/: __init__.py  elevenlabs_stt.py  elevenlabs_tts.py  openai_nlu.py  openai_realtime.py  openai_stt.py  openai_tts.py  synq_cloud_client.py
synq/skills/: ADDING_MODULES.md  activity_skill.py  base.py  desktop_skill.py  general_skill.py  productivity_skill.py  registry.py  time_skill.py
synq/stt/: __init__.py  (+3 more)
(+31 files in other folders)
